fix: profile image 401

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "contributors": [
     {
+      "email": "hey@yuntae.in",
+      "name": "icecream0910",
+      "url": "https://github.com/icecream0910"
+    },
+    {
       "email": "wmsttks@gmail.com",
       "name": "yoonjihong",
       "url": "https://github.com/yoonjihong"
